--- a/estilo.css
+++ b/estilo.css
@@ -67,6 +67,10 @@ ul{
         height: 70vh;
     }
 
+ .links a{
+     background-color:  blueviolet;
+ }   
+
 /*-------- Footer ------- */
 
 footer{
